--- a/components/componentStyle.css
+++ b/components/componentStyle.css
@@ -134,6 +134,7 @@ div.editText {
     margin: 5px;
     border: 0;
     background: whitesmoke;
+    text-decoration: none !important;
     border-radius: 3px;
     box-shadow: grey 1px 1px 4px 2px;
     color: black;
